--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
             <div class="cta-box">
                 <h2>Hemen Başlayın</h2>
                 <p>Zarf'ı indirin ve e-postalarınızı yönetmenin yeni yolunu keşfedin. Tamamen ücretsiz!</p>
-                <a href="https://github.com/user/zarf/releases" class="btn btn-primary">
+                <a href="https://github.com/xinzore/zarf" class="btn btn-primary">
                     📥 Zarf'ı İndir
                 </a>
             </div>
