Change title from 'Zarf - Modern E-posta İstemcisi' to 'Zarf Mail'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zarf - Modern E-posta İstemcisi</title>
+    <title>Zarf Mail</title>
     <meta name="description" content="Zarf, tüm e-posta hesaplarınızı tek bir yerde yönetmenizi sağlayan modern, hızlı ve güvenli bir masaüstü e-posta uygulamasıdır.">
     <link rel="icon" type="image/png" href="icon/logo-32.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
