Update GitHub links in index.html

--- a/index.html
+++ b/index.html
@@ -410,10 +410,10 @@
                 <h1>Tüm E-postalarınız Tek Bir Yerde</h1>
                 <p>Zarf, Gmail, Outlook ve diğer e-posta hesaplarınızı tek bir modern arayüzde birleştiren güçlü bir masaüstü uygulamasıdır.</p>
                 <div class="hero-buttons">
-                    <a href="https://github.com/user/zarf/releases" class="btn btn-primary">
+                    <a href="https://github.com/xinzore/Zarf-Mail/releases" class="btn btn-primary">
                         📥 İndir
                     </a>
-                    <a href="https://github.com/user/zarf" class="btn btn-secondary">
+                    <a href="https://github.com/xinzore/Zarf-Mail" class="btn btn-secondary">
                         ⭐ GitHub
                     </a>
                 </div>
